@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-28T08:13:45Z",
+  "timestamp" : "2023-07-28T16:14:03Z",
   "count_outdated" : 150,
   "uniques_outdated" : 125,
-  "count" : 156,
-  "uniques" : 131,
+  "count" : 158,
+  "uniques" : 132,
   "clones" : [
     {
       "timestamp": "2023-07-15T00:00:00Z",
@@ -52,12 +52,12 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
