@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-07-15T00:00:00Z",
@@ -29,8 +29,8 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
